# quintet

./: .gitignore  LICENSE  PROMPT.md  README.md
.github/workflows/: ci.yml  deploy-poc.yml
docs/: feasibility-analysis.en.md  feasibility-analysis.zh.md  game-modes-design.en.md  game-modes-design.zh.md  project-status.en.md  project-status.zh.md  scoring-design.en.md  scoring-design.zh.md  technical-design.en.md  technical-design.zh.md
docs/data/: bosses.json  modifiers.mvp.json  run-config.json
fixtures/: golden-scores.json
poc/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
poc/e2e/: solo.spec.ts
poc/public/: icon-preview.html  site.webmanifest
poc/src/: App.css  App.tsx  index.css  main.tsx  testHelpers.ts  vite-env.d.ts
poc/src/config/: colorMode.ts  scoringRules.test.ts  scoringRules.ts
poc/src/engine/: ai.test.ts  ai.ts  boardSize.test.ts  bosses.ts  card.ts  deck.ts  engine.test.ts  game.ts  golden.test.ts  grid.ts  hand.ts  index.ts  lineHighlights.test.ts  lineHighlights.ts  run.test.ts  run.ts  scoring.test.ts  scoring.ts  state.ts  undo.test.ts
poc/themes/: CasinoLuxe.tsx  LeteleClassic.tsx  MinimalFlat.tsx  NeoBrutalist.tsx  README.md  Sketch.tsx  Typographic.tsx  applyTheme.ts  config.ts  deckKey.ts  index.ts  types.ts  utils.ts
prototype/: README.md  pyproject.toml
prototype/quintet/: __init__.py  ai.py  card.py  cli.py  deck.py  game.py  grid.py  hand.py  scoring.py  simulate.py  two_player.py
prototype/tests/: test_golden.py  test_quintet.py
(+57 files in other folders)
