[project]
name = "quintet"
version = "0.1.0"
description = "Quintet card game prototype"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
quintet-play = "quintet.cli:main"
quintet-sim = "quintet.simulate:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quintet*"]
